--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "googleapis": "^166.0.0",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
